--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "class-validator": "^0.14.0",
     "crypto": "^1.0.1",
     "express-session": "^1.17.3",
+    "lodash": "^4.17.21",
     "mysql2": "^3.6.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
