--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@types/express": "^4.17.17",
     "@types/express-session": "^1.17.8",
     "@types/jest": "^29.5.2",
+    "@types/lodash": "^4.14.199",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
