--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/jwt": "^10.1.1",
     "@nestjs/mapped-types": "^2.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.0",
     "@nestjs/typeorm": "^10.0.0",
     "@sapphire/snowflake": "^3.5.1",
     "class-transformer": "^0.5.1",
@@ -50,6 +51,7 @@
     "@types/express-session": "^1.17.8",
     "@types/jest": "^29.5.2",
     "@types/lodash": "^4.14.199",
+    "@types/multer": "^1.4.8",
     "@types/node": "^20.3.1",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
