--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dev": "nest start --watch",
     "dev:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "start:demo-prod": "cross-env NODE_ENV=demo node dist/main",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "test": "jest",
@@ -37,6 +38,7 @@
     "express-session": "^1.17.3",
     "lodash": "^4.17.21",
     "mysql2": "^3.6.1",
+    "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "svg-captcha": "^1.4.0",
@@ -57,6 +59,7 @@
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.50.0",
     "jest": "^29.5.0",
     "source-map-support": "^0.5.21",
